--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="assests/css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+	<script src="https://use.fontawesome.com/7873633050.js"></script>
 </head>
 <body>
+	<header>
+		<img src="assests/img/header-logo.png">
+	</header>
+	<div id="caja">
+		<a href="#" id="agregar">Añadir una lista...</a>
+	</div>
 	
 	<script type="text/javascript" src="assests/js/main.js"></script>
 </body>
